# oros

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.e2e.yml  docker-compose.yml  progress-1.md  pyproject.toml  requirements-dev.txt  requirements.txt
consumers/chat-ui/: Dockerfile  jest.config.js  jest.setup.ts  package-lock.json  package.json  tailwind.config.ts
consumers/chat-ui/src/app/: layout.tsx  page.tsx  providers.tsx
consumers/chat-ui/src/app/__tests__/: bookmarks.test.tsx  settings.test.tsx
consumers/chat-ui/src/app/admin/ingest/: page.tsx
consumers/chat-ui/src/app/bookmarks/: page.tsx
consumers/chat-ui/src/app/chat/: page.tsx
consumers/chat-ui/src/app/documents/[id]/: page.tsx
consumers/chat-ui/src/app/settings/: page.tsx
consumers/chat-ui/src/components/chat/: ChatContainer.tsx  Citation.tsx  Message.tsx  index.ts
consumers/chat-ui/src/components/document/: DocumentChunks.tsx  DocumentHeader.tsx  index.ts
consumers/chat-ui/src/components/ingestion/: IngestForm.tsx  JobStatusCard.tsx  index.ts
consumers/chat-ui/src/components/layout/: Header.tsx
consumers/chat-ui/src/components/search/: Pagination.tsx  SearchBar.tsx  SearchFilters.tsx  SearchHistoryDropdown.tsx  SearchResultCard.tsx  index.ts
consumers/chat-ui/src/components/search/__tests__/: SearchBar.test.tsx  SearchHistoryDropdown.test.tsx
consumers/chat-ui/src/components/ui/: Badge.tsx  BookmarkButton.tsx  Button.tsx  Card.tsx  Input.tsx  Skeleton.tsx  Spinner.tsx  Textarea.tsx  ThemeToggle.tsx  index.ts
consumers/chat-ui/src/components/ui/__tests__/: BookmarkButton.test.tsx  ThemeToggle.test.tsx
consumers/chat-ui/src/lib/api/: client.ts  index.ts  ingestion.ts  retrieval.ts  types.ts
consumers/chat-ui/src/lib/hooks/: index.ts  useBookmarks.ts  useChat.ts  useDebounce.ts  useDocument.ts  useIngestion.ts  useLocalStorage.ts  useSearch.ts  useSearchHistory.ts  useTheme.ts
consumers/chat-ui/src/lib/hooks/__tests__/: useBookmarks.test.ts  useLocalStorage.test.ts  useSearchHistory.test.ts  useTheme.test.ts
consumers/chat-ui/src/lib/types/: localStorage.ts
consumers/chat-ui/src/lib/utils/: constants.ts  format.ts  index.ts
consumers/chat-ui/src/styles/: globals.css
infrastructure/terraform/: variables.tf
infrastructure/terraform/environments/dev/: main.tf  terraform.tfvars.example  variables.tf
infrastructure/terraform/modules/database/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/messaging/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/networking/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/storage/: main.tf  outputs.tf  variables.tf
migrations/: env.py
scripts/: init-db.sql  init-localstack.sh  run-e2e-tests.sh  test_ingestion.py
services/ingestion/: Dockerfile  requirements.txt
services/ingestion/src/: __init__.py  config.py  embedder.py  main.py  processor.py
services/ingestion/src/chunking/: __init__.py  strategies.py
services/ingestion/src/parsers/: __init__.py  base.py  pdf.py  pubmed_xml.py
services/ingestion/tests/: __init__.py  conftest.py  test_api.py  test_chunking.py  test_embedder.py  test_parsers.py  test_pdf_parser.py  test_processor.py  test_pubmed_parser.py
services/retrieval/: Dockerfile  requirements.txt
services/retrieval/src/: __init__.py  main.py  rag.py  search.py
services/retrieval/tests/: __init__.py  conftest.py  test_api.py  test_rag.py
services/shared/: __init__.py  config.py  database.py  logging.py  rate_limiter.py  storage.py
services/shared/models/: __init__.py  document.py
test-data/: download_papers.py  manifest.json
test-data/papers/: PMC10071452.xml  PMC10354806.xml  PMC10766161.xml  PMC10946997.xml  PMC11108624.xml  PMC11224995.xml  PMC11489562.xml  PMC11640421.xml  PMC11939850.xml  PMC12162490.xml  PMC12166701.xml  PMC12755203.xml  PMC12839059.xml  PMC3541057.xml  PMC4435123.xml  PMC5544997.xml  PMC6662516.xml  PMC7038301.xml  PMC7326509.xml  PMC7418007.xml  PMC7436128.xml  PMC7854298.xml  PMC8074255.xml  PMC8129133.xml  PMC8512780.xml  PMC9408902.xml  PMC9463390.xml  PMC9841506.xml  PMC9842069.xml  PMC9868144.xml
tests/e2e/: __init__.py  conftest.py  test_full_flow_e2e.py  test_ingestion_e2e.py  test_retrieval_e2e.py
